@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.55">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.56">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,8 +25,9 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.55 [20230317]:
-- Small Fixes with Playback
+Changelog 0.3.56 [20230318]:
+- Fixed Small Bug with Skip Intro Duration
+- Moved two settings
     </news>
   </extension>
 </addon>
