@@ -69,8 +69,8 @@
 		<setting type="sep" />
 		<setting id="smartplay.playingnextdialog" type="bool" label="40318" default="true" />
 		<setting id="skipoutro.aniskip.enable" type="bool" subsetting="true" label="40431" default="false" visible="eq(-1,true)" />
-		<setting id="skipoutro.aniskip.offset" type="slider" subsetting="true" label="40432" visible="eq(-1,true) + eq(-2,true)" range="-10,10" default="-3"/>
-		<setting id="skipoutro.aniskip.auto" type="bool" subsetting="true" label="40460" default="false" visible="eq(-2,true) + eq(-3,true)" />
+		<setting id="skipoutro.aniskip.auto" type="bool" subsetting="true" label="40460" default="false" visible="eq(-1,true) + eq(-2,true)" />
+		<setting id="skipoutro.aniskip.offset" type="slider" subsetting="true" label="40432" visible="eq(-2,true) + eq(-3,true)" range="-10,10" default="-3"/>
 		<setting id="playingnext.time" type="slider" subsetting="true" label="40319" option="int" range="10,120" default="90" visible="eq(-4,true)" />
 		<!--<setting id="playingnext.dialogstyle" type="enum" subsetting="true" label="40334" lvalues="40129|40335" default="0" visible="eq(-2,true)" />-->
 		<setting id="playingnext.defaultaction" type="enum" subsetting="true" label="40320" lvalues="40321|40322" default="0" visible="eq(-5,true)" />
@@ -80,8 +80,8 @@
 		<setting type="sep" />
 		<setting id="smartplay.skipintrodialog" type="bool" label="40324" default="true" />
 		<setting id="skipintro.aniskip.enable" type="bool" subsetting="true" label="40431" default="false" visible="eq(-1,true)" />
-		<setting id="skipintro.aniskip.offset" type="slider" subsetting="true" label="40432" visible="eq(-1,true) + eq(-2,true)" range="-10,10" default="-3"/>
-		<setting id="skipintro.aniskip.auto" type="bool" subsetting="true" label="40461" default="false" visible="eq(-2,true) + eq(-3,true)" />
+		<setting id="skipintro.aniskip.auto" type="bool" subsetting="true" label="40461" default="false" visible="eq(-1,true) + eq(-2,true)" />
+		<setting id="skipintro.aniskip.offset" type="slider" subsetting="true" label="40432" visible="eq(-2,true) + eq(-3,true)" range="-10,10" default="-3"/>
 		<setting id="skipintro.time" type="slider" subsetting="true" label="40325" option="int" range="10,100" default="86" visible="eq(-4,true)" />
 		<setting id="skipintro.delay" type="slider" subsetting="true" label="40424" option="int" range="1,100" default="2" visible="eq(-5,true)" />
 		<setting id="skipintro.duration" type="slider" subsetting="true" label="40430" option="int" range="0,5" visible="eq(-6,true)" />
